--- a/service_template.service
+++ b/service_template.service
@@ -6,7 +6,7 @@ After=network.target
 [Service]
 Type=simple
 ExecStart=/usr/local/bin/sslocal -c config_path
-User=nobody
+User=root
 
 [Install]
 WantedBy=multi-user.target
