--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@azure/arm-network": "31.0.0",
     "@azure/identity": "3.2.2",
     "axios": "1.4.0",
+    "cheerio": "1.0.0-rc.12",
     "body-parser": "1.20.2",
     "cloudflare": "2.9.1",
     "configparser": "0.3.10",
